<!--
 This file is part of Adblock Plus <https://adblockplus.org/>,
 Copyright (C) 2006-present eyeo GmbH

 Adblock Plus is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License version 3 as
 published by the Free Software Foundation.

 Adblock Plus is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with Adblock Plus.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="product_name">Adblock Plus</string>
    <string name="target_name">for Samsung Internet</string>
    <string name="acceptable_ads">Acceptable Ads</string>
    <string name="intrusive_ads">Intrusive ads</string>
    <string name="acceptable_ads_fair_standard_title">Fair standard</string>
    <string name="acceptable_ads_fair_standard_description">Acceptable Ads are never video, sound or popup ads</string>
    <string name="acceptable_ads_placement_title">Placement</string>
    <string name="acceptable_ads_placement_description">Do not disrupt the natural reading flow</string>
    <string name="acceptable_ads_distinction_title">Distinction</string>
    <string name="acceptable_ads_distinction_description">Acceptable Ads are always clearly marked as ads</string>
    <string name="acceptable_ads_size_title">Size</string>
    <string name="acceptable_ads_size_description">Span less than 15% of the screen upon initial load</string>
</resources>